# cli-game

./: .gitignore  .mypy.ini  client.py  lint  main.py  pyproject.toml  server.py
.claude/commands/vibes/: brainstorm.md  endsession.md
cli_game/: constants.py  controller.py  game_state.py  models.py
cli_game/scripts/: client.py  main.py  server.py
vibes/instructions/: documenting-a-session.md
vibes/project/: CODEBASE.md
vibes/project/brainstorm/: cli-game-discovery-learning.md
vibes/worklogs/: WORKLOG.md  session.0001.md  session.0002.md  session.0003.md  session.0004.md  session.0005.md  session.0006.md
