[project]
name = "cli-game"
version = "0.1.0"
description = "A game that teaches *nix command line"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.51",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pyright>=1.1.403",
    "pyupgrade>=3.20.0",
]

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.13"
deprecateTypingAliases = true
verboseOutput = true

[tool.ruff]
lint.select = ["UP", "UP007"]
target-version = "py313"
